--- a/options.cfg
+++ b/options.cfg
@@ -3,6 +3,7 @@ difficulty = 12
 difficulty_increases = True
 error_interval_min = 20.0
 error_interval_max = 80.0
-meltdown_code = CRISIS911
+# below stuff just doesn't function atm
+meltdown_code = CRISIS911 # wise please change this to whatever barney tells you
 easy_mode = False
 economy_mode = False
